@@ -301,6 +301,7 @@
     <Compile Include="ClassComponents\GenericImplA.cs" />
     <Compile Include="ClassComponents\GenericWithTDependency.cs" />
     <Compile Include="ClassComponents\PropertySetterThrows.cs" />
+    <Compile Include="Components\AbPropChild.cs" />
     <Compile Include="Components\ADisposable.cs" />
     <Compile Include="Components\AppHost.cs" />
     <Compile Include="Components\AppScreenCBA.cs" />
